[package]
name = "auth"
version = "0.1.0"
authors = ["Jonathan Fok Kan <jfokkan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydra = { path = "../hydra" }

warp = "0.2.0"
tokio = { version = "0.2", features = ["full"] }

log = "0.4.8"
env_logger = "0.7"

tera = "1.0.1"

serde = { version = "1.0", features = ["derive"] }